# The-Data-Contract-Enforcer

./: .env.example  .gitignore  .pre-commit-config.yaml  DOMAIN_NOTES.md  README.md  consolidated_summary_report.md  format.ps1  pyproject.toml
.github/workflows/: ci.yml
analysis_reports/: langsmith_analysis.json  week1_analysis.json  week2_analysis.json  week3_analysis.json  week4_analysis.json  week5_analysis.json
contract_registry/: subscriptions.yaml
contracts/: ai_extension.py  attributor.py  create_violation.py  generator.py  report_generator.py  runner.py  schema_analyser.py
generated_contracts/: langsmith-trace-records.yaml  langsmith-trace-records_dbt.yml  langsmith-trace-records_enriched.yaml  week1-intent-records.yaml  week1-intent-records_dbt.yml  week1-intent-records_enriched.yaml  week2-verdicts.yaml  week2-verdicts_dbt.yml  week2-verdicts_enriched.yaml  week3-document-refinery-extractions.yaml  week3-document-refinery-extractions_dbt.yml  week3-document-refinery-extractions_enriched.yaml  week4-lineage-snapshots_dbt.yml  week4-lineage-snapshots_enriched.yaml  week5-event-records.yaml  week5-event-records_dbt.yml  week5-event-records_enriched.yaml
tests/: test_dummy.py
validation_reports/: langsmith_validation.json  week1_validation.json  week2_validation.json  week3_validation.json  week4_validation.json  week5_validation.json
violation_log/: langsmith_validation_FAILURE.json  week1_validation_FAILURE.json  week2_validation_FAILURE.json  week3_validation_FAILURE.json  week4_validation_FAILURE.json  week5_validation_FAILURE.json
(+29 files in other folders)
